# FTL

./: .codespellignore  .editorconfig  .gitignore  .gitmodules  .pullapprove.yml  .travis.yml  CMakeLists.txt  FTL.h  FTLtest.sh  GeoIP.c  LICENSE  Makefile  README.md  api.c  api.h  api_dns.c  api_stats.c  args.c  args.h  build.sh  cJSON.c  cJSON.h  capabilities.c  config.c  config.h  daemon.c  daemon.h  database.c  database.h  datastructure.c  deploy.sh  dnsmasq_interface.c  dnsmasq_interface.h  dnsmasq_interface_actions.c  docker-compose.yaml  files.c  files.h  flush.c  gc.c  gc.h  (+34 more)
src/: CMakeLists.txt  FTL.h  args.c  args.h  cache_info.h  capabilities.c  capabilities.h  config.c  config.h  daemon.c  daemon.h  datastructure.c  datastructure.h  dhcp-discover.c  dnsmasq_interface.c  dnsmasq_interface.h  dnsmasq_net.h  edns0.c  edns0.h  enums.h  events.c  events.h  fifo.c  fifo.h  files.c  files.h  gc.c  gc.h  gen_version.cmake  gravity-tools.c  gravity-tools.h  log.c  log.h  lookup-table.c  lookup-table.h  main.c  main.h  math.c  math.h  memory.c  (+34 more)
src/api/: 2fa.c  CMakeLists.txt  action.c  api.c  api.h  api_customdns.c  api_helper.h  auth.c  auth.h  config.c  dhcp.c  dns.c  dns.h  ftl.c  ftl.h  history.c  http-common.c  http-common.h  http.c  http.h  info.c  json_macros.h  list.c  logs.c  msgpack.c  network.c  padd.c  ph7.c  ph7.h  queries.c  request.c  request.h  routes.c  routes.h  search.c  settings.c  socket.c  socket.h  stats.c  stats_database.c  (+6 more)
src/api/docs/: CMakeLists.txt  docs.c  docs.h
src/api/docs/content/: index.css  index.html  pi-hole.js
src/api/docs/content/specs/: action.yaml  auth.yaml  clients.yaml  common.yaml  config.yaml  dhcp.yaml  dns.yaml  docs.yaml  domains.yaml  endpoints.yaml  ftl.yaml  groups.yaml  history.yaml  info.yaml  lists.yaml  localdns.yaml  logs.yaml  main.yaml  network.yaml  padd.yaml  queries.yaml  search.yaml  (+3 more)
src/api/ftl/: config.c  network.c
src/civetweb/: CMakeLists.txt  civetweb.c  civetweb.h  handle_form.inl
src/compression/: CMakeLists.txt  gzip.c  gzip.h  teleporter.c  teleporter.h
src/compression/miniz/: miniz.c
src/config/: CMakeLists.txt  cli.c  cli.h  config.c  config.h  dnsmasq_config.c  dnsmasq_config.h  env.c  env.h  inotify.c  inotify.h  legacy_reader.c  legacy_reader.h  levenshtein.c  levenshtein.h  password.c  password.h  setupVars.c  setupVars.h  suggest.c  suggest.h  toml_helper.c  toml_helper.h  toml_reader.c  toml_reader.h  toml_writer.c  toml_writer.h  validator.c  validator.h
src/config/tomlc17/: CMakeLists.txt  LICENSE  tomlc17.c  tomlc17.h
src/config/tomlc99/: CMakeLists.txt  toml.c
src/database/: CMakeLists.txt  aliasclients.c  aliasclients.h  common.c  common.h  custom-dns.c  custom-dns.h  database-thread.c  database-thread.h  gravity-db.c  gravity-db.h  lsqlite3.c  message-table.c  message-table.h  network-table.c  network-table.h  query-table.c  query-table.h  session-table.c  session-table.h  shell.c  sqlite3-ext.c  sqlite3-ext.h  sqlite3.h  sqlite3_rsync.c  superclients.c  superclients.h
src/dnsmasq/: CMakeLists.txt  arp.c  auth.c  blockdata.c  bpf.c  cache.c  config.h  conntrack.c  crypto.c  dbus.c  dhcp-common.c  dhcp-protocol.h  dhcp.c  dhcp6-protocol.h  dhcp6.c  dns-protocol.h  dnsmasq.c  dnsmasq.h  dnssec.c  domain-match.c  domain.c  dump.c  edns0.c  forward.c  hash-questions.c  hash_questions.c  helper.c  inotify.c  ip6addr.h  ipset.c  lease.c  log.c  loop.c  metrics.c  metrics.h  netlink.c  network.c  nftset.c  option.c  outpacket.c  (+12 more)
src/hooks/: CMakeLists.txt  CNAME.c  CNAME.h  alladdr_extract_ip.c  alladdr_extract_ip.h  blocking_metadata.c  blocking_metadata.h  cache.c  cache.h  cache_info.c  cache_info.h  check_blocking.c  check_blocking.h  detect_blocked_IP.c  detect_blocked_IP.h  dhcp.c  dhcp.h  dns_name.c  dns_name.h  dnsmasq_reload.c  dnsmasq_reload.h  dnssec.c  dnssec.h  extract_question_flags.c  extract_question_flags.h  fork_and_bind.c  fork_and_bind.h  forwarded.c  forwarded.h  forwarding_failed.c  forwarding_failed.h  forwarding_retried.c  forwarding_retried.h  header_analysis.c  header_analysis.h  hook.c  hook.h  iface.c  iface.h  log.c  (+27 more)
src/libexecinfo/: CMakeLists.txt  README.md  execinfo.c  execinfo.h  stacktraverse.c  stacktraverse.h
src/lua/: CMakeLists.txt  ftl_lua.c  ftl_lua.h  ldebug.c  linit.c  lsqlite3.c  lua.c  luac.c  luaconf.h  lualib.h
src/lua/libs/: CMakeLists.txt
src/lua/scripts/: CMakeLists.txt  inspect.lua  scripts.h
src/microtar/: CMakeLists.txt  microtar-mmap.c  microtar-mmap.h  microtar.c  microtar.h
src/miniz/: CMakeLists.txt  compression.c  compression.h  teleporter.c  teleporter.h
src/ntp/: CMakeLists.txt  client.c  ntp.h  rtc.c  server.c
src/ph7/: CMakeLists.txt  ph7.c
src/syscalls/: CMakeLists.txt  accept.c  asprintf.c  calloc.c  fopen.c  fprintf.c  free.c  ftlallocate.c  netlink.c  netlink_consts.h  pthread_mutex_lock.c  realloc.c  recv.c  recvfrom.c  select.c  sendto.c  snprintf.c  sprintf.c  strdup.c  string.c  syscalls.h  vasprintf.c  vfprintf.c  vsnprintf.c  vsprintf.c  write.c
src/tools/: CMakeLists.txt  arp-scan.c  arp-scan.h  dhcp-discover.c  dhcp-discover.h  dhcpv6-discover.c  dhcpv6-discover.h  gravity-parseList.c  gravity-parseList.h  netlink.c  netlink.h  netlink_consts.h
src/tre-regex/: CMakeLists.txt  regcomp.c  regerror.c  regexec.c  tre-compile.c  tre-config.h  tre-filter.c  tre-filter.h  tre-internal.h  tre-match-approx.c  tre-match-backtrack.c  tre-match-parallel.c  tre-match-utils.h  tre-parse.c  tre-parse.h  tre-stack.h  tre.h  xmalloc.c
src/webserver/: CMakeLists.txt  http-common.c  http-common.h  json_macros.h  lua_web.c  lua_web.h  ph7.c  ph7.h  webserver.c  webserver.h  x509.c  x509.h
src/webserver/cJSON/: CMakeLists.txt  cJSON.c
src/webserver/civetweb/: CMakeLists.txt  civetweb.c  civetweb.h  mod_lua.inl  mod_mbedtls.inl  mod_zlib.inl
src/webserver/ph7/: ph7.c
src/webserver/ph7_ext/: CMakeLists.txt  extensions.h  fileversion.c  gethostname.c  webtheme.c
src/zip/: CMakeLists.txt  gzip.c  gzip.h  tar.c  tar.h  teleporter.c  teleporter.h
src/zip/miniz/: CMakeLists.txt  miniz.c  miniz.h
(+137 files in other folders)
